--- a/seizouqr.html
+++ b/seizouqr.html
@@ -256,6 +256,16 @@
   .danger{ color:#b42318; font-weight:700; }
 
   footer{ text-align:center; color:#9ca3af; font-size:12px; padding:16px 0; }
+
+  /* ===== 全体背景：ステータス別（くっきり） ===== */
+body.bg-NOT_STARTED{ background:#e5e7eb; }        /* グレー */
+body.bg-RUNNING{ background:#86efac; }            /* 緑 */
+body.bg-TRY{ background:#93c5fd; }                /* 青 */
+body.bg-ABNORMAL_STOP{ background:#fca5a5; }      /* 赤 */
+body.bg-PLAN_STOP{ background:#fdba74; }          /* オレンジ */
+body.bg-MATERIAL_CHANGE{ background:#d8b4fe; }    /* 紫 */
+body.bg-SETUP_CHANGE{ background:#fde047; }       /* 黄 */
+
 </style>
 </head>
 
