--- a/seizouqr.html
+++ b/seizouqr.html
@@ -14,7 +14,6 @@
   *{ box-sizing:border-box; }
   html,body{ height:100%; }
 
-  /* ===== 全体背景：ステータス別（ほんのり） ===== */
   body{
     margin:0; color:var(--fg);
     font-family:system-ui,-apple-system,"Segoe UI",Roboto,"Noto Sans JP",sans-serif;
@@ -22,13 +21,6 @@
     transition: background-color .35s ease;
     background:var(--bg);
   }
-  body.bg-NOT_STARTED{ background:#f7f7f8; }
-  body.bg-RUNNING{ background:#f0fdf4; }          /* 薄い緑 */
-  body.bg-TRY{ background:#eff6ff; }              /* 薄い青 */
-  body.bg-ABNORMAL_STOP{ background:#fef2f2; }    /* 薄い赤 */
-  body.bg-PLAN_STOP{ background:#fff7ed; }        /* 薄いオレンジ */
-  body.bg-MATERIAL_CHANGE{ background:#faf5ff; }  /* 薄い紫 */
-  body.bg-SETUP_CHANGE{ background:#fefce8; }     /* 薄い黄 */
 
   header{
     background:#fff; border-bottom:1px solid var(--border);
@@ -138,12 +130,8 @@
   .imgHint{ color:#9ca3af; font-size:13px; text-align:center; line-height:1.6; }
 
   /* ★ 照合結果をオーバーレイ表示 */
-  .resultArea{ 
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+  .resultArea{
+    position: fixed; top: 0; left: 0; width: 100%; height: 100%;
     background: rgba(255, 255, 255, 0.95);
     z-index: 9999;
     display: none;
@@ -151,13 +139,9 @@
     justify-content: center;
     backdrop-filter: blur(8px);
   }
-  .resultArea.show {
-    display: flex;
-  }
-  .resultMark{ 
-    font-size: 280px; 
-    line-height: 1; 
-    display: none;
+  .resultArea.show { display: flex; }
+  .resultMark{
+    font-size: 280px; line-height: 1; display: none;
     font-weight: 900;
     animation: popIn 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
     text-shadow: 0 8px 16px rgba(0,0,0,0.2);
@@ -167,10 +151,10 @@
     50% { transform: scale(1.1); }
     100% { transform: scale(1); opacity: 1; }
   }
-  .ok{ color:var(--ok); } 
+  .ok{ color:var(--ok); }
   .ng{ color:var(--ng); }
-  .lock{ 
-    display:none; 
+  .lock{
+    display:none;
     font-size: 28px;
     color:#fff;
     background: var(--ng);
@@ -181,16 +165,10 @@
     box-shadow: 0 12px 24px rgba(0,0,0,0.3);
   }
   .status{ font-size:15px; color:var(--muted); margin-top:12px; }
-  
-  /* レスポンシブ */
+
   @media (max-width: 768px) {
-    .resultMark {
-      font-size: 200px;
-    }
-    .lock {
-      font-size: 22px;
-      padding: 20px 30px;
-    }
+    .resultMark { font-size: 200px; }
+    .lock { font-size: 22px; padding: 20px 30px; }
   }
 
   .btn{
@@ -258,14 +236,13 @@
   footer{ text-align:center; color:#9ca3af; font-size:12px; padding:16px 0; }
 
   /* ===== 全体背景：ステータス別（くっきり） ===== */
-body.bg-NOT_STARTED{ background:#e5e7eb; }        /* グレー */
-body.bg-RUNNING{ background:#86efac; }            /* 緑 */
-body.bg-TRY{ background:#93c5fd; }                /* 青 */
-body.bg-ABNORMAL_STOP{ background:#fca5a5; }      /* 赤 */
-body.bg-PLAN_STOP{ background:#fdba74; }          /* オレンジ */
-body.bg-MATERIAL_CHANGE{ background:#d8b4fe; }    /* 紫 */
-body.bg-SETUP_CHANGE{ background:#fde047; }       /* 黄 */
-
+  body.bg-NOT_STARTED{ background:#e5e7eb; }        /* グレー */
+  body.bg-RUNNING{ background:#86efac; }            /* 緑 */
+  body.bg-TRY{ background:#93c5fd; }                /* 青 */
+  body.bg-ABNORMAL_STOP{ background:#fca5a5; }      /* 赤 */
+  body.bg-PLAN_STOP{ background:#fdba74; }          /* オレンジ */
+  body.bg-MATERIAL_CHANGE{ background:#d8b4fe; }    /* 紫 */
+  body.bg-SETUP_CHANGE{ background:#fde047; }       /* 黄 */
 </style>
 </head>
 
@@ -346,7 +323,7 @@ body.bg-SETUP_CHANGE{ background:#fde047; }       /* 黄 */
         </div>
       </div>
 
-      <!-- ★ 照合結果オーバーレイ（画面全体に重ねて表示） -->
+      <!-- ★ 照合結果オーバーレイ -->
       <div class="resultArea">
         <div id="ok" class="resultMark ok">○</div>
         <div id="ng" class="resultMark ng">×</div>
@@ -361,7 +338,7 @@ body.bg-SETUP_CHANGE{ background:#fde047; }       /* 黄 */
         <button id="btnPlanStop" class="stateBtn" type="button">計画停止中</button>
         <button id="btnMaterialChange" class="stateBtn" type="button">材料替え中</button>
       </div>
-<div>　</div>
+      <div>　</div>
       <div style="display:flex; gap:10px; flex-wrap:wrap;">
         <button id="resetBtn" class="btn big primary" tabindex="-1">製品切替え</button>
         <button id="saveBtn" class="btn" tabindex="-1">ログ保存（CSV）</button>
@@ -369,10 +346,10 @@ body.bg-SETUP_CHANGE{ background:#fde047; }       /* 黄 */
       </div>
 
       <div id="mode" class="status">基準QRを読み込んでください</div>
-      <div class="small">切り出し固定：開始=3、長さ=5（空白除去）</div>
+      <div class="small">切り出し固定：開始=2、長さ=5（空白除去）</div>
     </div>
 
-    <!-- ★ ④ 今日のステータス遷移タイムライン -->
+    <!-- 今日のステータス遷移 -->
     <div class="card">
       <div class="tlHead">
         <div class="title">今日のステータス遷移</div>
@@ -486,6 +463,7 @@ let prodStatus = PROD_STATUS.NOT_STARTED;
 /* module側から注入される関数 */
 let __getMasterBySeiriNo = null; // async(seiriNo)=>{imagePath,downloadUrl,...}|null
 let __saveMaster = null;         // async(seiriNo,file)=>{imagePath,downloadUrl}
+let __loadLineStatus = null;     // async(line)=>{...}|null  ★追加（起動時復元用）
 
 /* Firestore書込み（module側が準備できたら注入） */
 let __firestoreLogRow = null;    // qrLogs
@@ -553,25 +531,6 @@ function setActiveTab(mode){
 $tabScan.addEventListener("click", ()=>setActiveTab("scan"));
 $tabMaster.addEventListener("click", ()=>setActiveTab("master"));
 
-/* ================== 初期：ライン/部署 ================== */
-window.addEventListener("load", ()=>{
-  if (lineName) Array.from($lineSelect.options).forEach(o=>{ if(o.value===lineName) o.selected=true; });
-  if (bushoName) Array.from($bushoSelect.options).forEach(o=>{ if(o.value===bushoName) o.selected=true; });
-  $lineBadge.textContent = lineName || "未設定";
-  $bushoBadge.textContent = bushoName || "未設定";
-  renderProdStatus();
-});
-$lineSelect.addEventListener("change", ()=>{
-  lineName = $lineSelect.value;
-  localStorage.setItem(LINE_KEY, lineName);
-  $lineBadge.textContent = lineName || "未設定";
-});
-$bushoSelect.addEventListener("change", ()=>{
-  bushoName = $bushoSelect.value;
-  localStorage.setItem(BUSHO_KEY, bushoName);
-  $bushoBadge.textContent = bushoName || "未設定";
-});
-
 /* ================== Utils ================== */
 function nowString(){
   const d=new Date(); const pad=n=>String(n).padStart(2,"0");
@@ -580,27 +539,27 @@ function nowString(){
 function normalizeSeiriNo(s){ return String(s||"").trim().replace(/\s+/g,""); }
 function cutQR(qr){ return normalizeSeiriNo(String(qr||"").substr(CUT_START, CUT_LENGTH)); }
 
-function showOK(){ 
+function showOK(){
   const resultArea = document.querySelector('.resultArea');
   resultArea.classList.add('show');
-  $ok.style.display="block"; 
-  $ng.style.display="none"; 
+  $ok.style.display="block";
+  $ng.style.display="none";
   setTimeout(()=>{
     $ok.style.display="none";
     resultArea.classList.remove('show');
-  }, 1500); 
+  }, 1500);
 }
-function showNGPersistent(){ 
+function showNGPersistent(){
   const resultArea = document.querySelector('.resultArea');
   resultArea.classList.add('show');
-  $ok.style.display="none"; 
-  $ng.style.display="block"; 
+  $ok.style.display="none";
+  $ng.style.display="block";
 }
-function clearMarks(){ 
+function clearMarks(){
   const resultArea = document.querySelector('.resultArea');
   resultArea.classList.remove('show');
-  $ok.style.display="none"; 
-  $ng.style.display="none"; 
+  $ok.style.display="none";
+  $ng.style.display="none";
 }
 
 function setLock(state){
@@ -666,20 +625,16 @@ function statusKeyFromText(text){
 function renderProdStatus(){
   const key = statusKeyFromText(prodStatus);
 
-  // 文字
   $prodStateBig.textContent = prodStatus;
   $statusHint.textContent = baseQR ? `基準：${baseQR}` : "基準未設定";
 
-  // ステータスバー色
   $statusBar.className = `statusBar status--${key}`;
 
-  // 画面全体背景
   document.body.classList.remove(
     "bg-NOT_STARTED","bg-RUNNING","bg-TRY","bg-ABNORMAL_STOP","bg-PLAN_STOP","bg-MATERIAL_CHANGE","bg-SETUP_CHANGE"
   );
   document.body.classList.add(`bg-${key}`);
 
-  // ボタンactive
   const setActive = (btn, on)=>btn.classList.toggle("active", !!on);
   setActive($btnBackRunning, prodStatus === PROD_STATUS.RUNNING);
   setActive($btnTry, prodStatus === PROD_STATUS.TRY);
@@ -689,8 +644,7 @@ function renderProdStatus(){
 }
 
 /**
- * ★ステータス変更（ここで “時系列ログ” をFirestoreへ保存）
- * reason: どの操作で変えたか（ボタン/基準QRセット等）
+ * ★ステータス変更（時系列ログ + lineStatus更新）
  */
 function setProdStatus(next, reason="MANUAL"){
   if(!next || next === prodStatus) return;
@@ -699,12 +653,10 @@ function setProdStatus(next, reason="MANUAL"){
   prodStatus = next;
   renderProdStatus();
 
-  // CSV/qrLogs にも残す（あなたの運用で追えるように）
   logRow([nowString(), "-", "-", `STATUS:${reason}`, isLocked?"LOCKED":"UNLOCK", `${prev}→${next}`, lineName, bushoName, prodStatus]);
 
-  // ★ Firestore 時系列保存（prodStatusLogs）
   if(typeof __firestoreStatusLog === "function"){
-    const tsMs = Date.now(); // ← タイムライン表示の当日範囲検索に使う
+    const tsMs = Date.now();
     __firestoreStatusLog({
       tsText: nowString(),
       tsMs,
@@ -720,7 +672,6 @@ function setProdStatus(next, reason="MANUAL"){
     }).catch(()=>{});
   }
 
-  // ★★ ダッシュボード連携：ライン別ステータスをFirestoreに書き込む
   if(lineName && typeof window.__writeLineStatus === "function"){
     window.__writeLineStatus(lineName, {
       state: statusKeyFromText(next),
@@ -737,14 +688,14 @@ function setProdStatus(next, reason="MANUAL"){
 /* ================== 状態ボタンイベント ================== */
 $btnBackRunning.addEventListener("click", ()=>{
   setProdStatus(PROD_STATUS.RUNNING, "BACK_TO_RUNNING_BTN");
-  clearMarks(); // ★ ×表示（＋○）を消す
+  clearMarks();
 });
 $btnTry.addEventListener("click", ()=>setProdStatus(PROD_STATUS.TRY, "TRY_BTN"));
 $btnAbnormalStop.addEventListener("click", ()=>setProdStatus(PROD_STATUS.ABNORMAL_STOP, "ABNORMAL_STOP_BTN"));
 $btnPlanStop.addEventListener("click", ()=>setProdStatus(PROD_STATUS.PLAN_STOP, "PLAN_STOP_BTN"));
 $btnMaterialChange.addEventListener("click", ()=>setProdStatus(PROD_STATUS.MATERIAL_CHANGE, "MATERIAL_CHANGE_BTN"));
 
-/* ================== Timeline描画（moduleから呼ばれる） ================== */
+/* ================== Timeline描画 ================== */
 function esc(s){ return String(s??"").replace(/[&<>"']/g, m=>({ "&":"&amp;","<":"&lt;",">":"&gt;",'"':"&quot;","'":"&#39;" }[m])); }
 function fmtTimeFromMs(ms){
   try{
@@ -851,6 +802,126 @@ $masterFetchBtn.addEventListener("click", async ()=>{
   }
 });
 
+/* ================== 起動時復元（Firebase→画面状態へ反映） ================== */
+let __restoring = false;
+
+async function applyRestoredState(state){
+  // state: lineStatus/{line}
+  // 例) { state:"RUNNING", stateText:"生産中", product:"ABCDE", lockState:"LOCKED", busho:"1G", ... }
+  const restoredProdText = state && state.stateText ? String(state.stateText) : null;
+  const restoredBase = state && state.product ? String(state.product) : null;
+  const restoredLock = state && state.lockState ? String(state.lockState) : "UNLOCK";
+
+  // 1) baseQR
+  baseQR = restoredBase || null;
+  updateBaseDisplay(baseQR);
+
+  // 2) prodStatus（ログは残さず静かに反映）
+  if(restoredProdText && Object.values(PROD_STATUS).includes(restoredProdText)){
+    prodStatus = restoredProdText;
+  }else{
+    // base があるのに stateText が無い場合は「生産中」に寄せる（現場運用的に自然）
+    prodStatus = baseQR ? PROD_STATUS.RUNNING : PROD_STATUS.NOT_STARTED;
+  }
+  renderProdStatus();
+
+  // 3) ロック状態
+  setLock(restoredLock === "LOCKED");
+
+  // 4) mode表示
+  if(baseQR){
+    if(isLocked){
+      $mode.textContent = "NG！管理者QRを読み込んでください";
+      showNGPersistent();
+    }else{
+      $mode.textContent = `照合モード（基準/整理No: ${baseQR}）`;
+      clearMarks();
+    }
+  }else{
+    $mode.textContent = "基準QRを読み込んでください";
+    clearMarks();
+  }
+
+  // 5) 画像表示（baseQRがあるときだけ）
+  if(baseQR){
+    try{
+      if(__getMasterBySeiriNo){
+        const master = await __getMasterBySeiriNo(baseQR);
+        if(master && master.downloadUrl){
+          showImage(master.downloadUrl);
+          setMasterBadge(true);
+        }else{
+          setMasterBadge(false);
+          showNoImage(`画像マスタ未登録：<b>${esc(baseQR)}</b><br>「画像マスタ登録」タブで登録してください。`);
+        }
+      }else{
+        setMasterBadge(false);
+        showNoImage("Firebase未接続のため画像マスタ検索ができません。");
+      }
+    }catch(e){
+      console.warn(e);
+      setMasterBadge(false);
+      showNoImage("画像マスタ検索エラー（コンソール確認）");
+    }
+  }else{
+    setMasterBadge(false);
+    $productImage.style.display="none";
+    $imgHint.style.display="block";
+    $imgHint.textContent="基準QRを読み込むと、整理Noで画像マスタを検索して表示します。";
+  }
+}
+
+async function restoreFromFirebase(){
+  if(__restoring) return;
+  if(!lineName) return;                 // ライン未設定なら待つ
+  if(typeof __loadLineStatus !== "function") return; // Firebase未準備なら待つ
+
+  __restoring = true;
+  try{
+    const st = await __loadLineStatus(lineName);
+    if(st){
+      await applyRestoredState(st);
+    }else{
+      // まだ何も無ければ初期表示のまま
+      prodStatus = PROD_STATUS.NOT_STARTED;
+      baseQR = null;
+      setLock(false);
+      renderProdStatus();
+      updateBaseDisplay(null);
+      $mode.textContent = "基準QRを読み込んでください";
+      clearMarks();
+    }
+  }catch(e){
+    console.warn("restoreFromFirebase failed:", e);
+  }finally{
+    __restoring = false;
+  }
+}
+// module側から呼べるように公開
+window.__restoreFromFirebase = restoreFromFirebase;
+
+/* ================== 初期：ライン/部署 ================== */
+window.addEventListener("load", ()=>{
+  if (lineName) Array.from($lineSelect.options).forEach(o=>{ if(o.value===lineName) o.selected=true; });
+  if (bushoName) Array.from($bushoSelect.options).forEach(o=>{ if(o.value===bushoName) o.selected=true; });
+  $lineBadge.textContent = lineName || "未設定";
+  $bushoBadge.textContent = bushoName || "未設定";
+  renderProdStatus();
+  // ※ Firebase準備後に module 側から __restoreFromFirebase() を呼ぶ
+});
+$lineSelect.addEventListener("change", ()=>{
+  lineName = $lineSelect.value;
+  localStorage.setItem(LINE_KEY, lineName);
+  $lineBadge.textContent = lineName || "未設定";
+  // ★ ラインを選んだ瞬間に復元
+  restoreFromFirebase();
+});
+$bushoSelect.addEventListener("change", ()=>{
+  bushoName = $bushoSelect.value;
+  localStorage.setItem(BUSHO_KEY, bushoName);
+  $bushoBadge.textContent = bushoName || "未設定";
+});
+
 /* ================== スキャナ入力（documentで受ける） ================== */
 let buffer = "";
 let idleTimer = null;
@@ -923,6 +994,19 @@ async function processQR(qrRaw){
       setLock(false); showOK();
       $mode.textContent="解除されました。照合を再開します。";
       logRow([now, qrRaw, sliced, "UNLOCK_BY_ADMIN", "UNLOCK", "", lineName, bushoName, prodStatus]);
+
+      // ★ ロック解除を lineStatus に反映（同じステータスでも lockState は更新される）
+      if(lineName && typeof window.__writeLineStatus === "function"){
+        window.__writeLineStatus(lineName, {
+          state: statusKeyFromText(prodStatus),
+          stateText: prodStatus,
+          reason: "UNLOCK_BY_ADMIN",
+          product: baseQR || null,
+          updatedAt: new Date().toISOString(),
+          busho: bushoName || null,
+          lockState: "UNLOCK"
+        }).catch(()=>{});
+      }
     }else{
       showNGPersistent();
       logRow([now, qrRaw, sliced, "LOCK_REJECT", "LOCKED", "", lineName, bushoName, prodStatus]);
@@ -940,6 +1024,19 @@ async function processQR(qrRaw){
     setLock(true);
     $mode.textContent="NG！管理者QRを読み込んでください";
     logRow([now, qrRaw, sliced, "NG", "LOCKED", "", lineName, bushoName, prodStatus]);
+
+    // ★ NGロックを lineStatus に反映（同じステータスでも lockState は更新される）
+    if(lineName && typeof window.__writeLineStatus === "function"){
+      window.__writeLineStatus(lineName, {
+        state: statusKeyFromText(prodStatus),
+        stateText: prodStatus,
+        reason: "NG_LOCK",
+        product: baseQR || null,
+        updatedAt: new Date().toISOString(),
+        busho: bushoName || null,
+        lockState: "LOCKED"
+      }).catch(()=>{});
+    }
   }
 }
 
@@ -1062,11 +1159,21 @@ document.getElementById("exitBtn").addEventListener("click", ()=>{ downloadCSV(l
     return { imagePath, downloadUrl };
   };
 
+  // ★ 起動時復元用：lineStatus/{line} を読む
+  window.__loadLineStatus = async (line) => {
+    const key = String(line||"").trim();
+    if(!key) return null;
+    const snap = await getDoc(doc(db, "lineStatus", key));
+    return snap.exists() ? (snap.data() || null) : null;
+  };
+
   // 非module側へ反映
   // eslint-disable-next-line no-undef
   __getMasterBySeiriNo = window.__getMasterBySeiriNo;
   // eslint-disable-next-line no-undef
   __saveMaster = window.__saveMaster;
+  // eslint-disable-next-line no-undef
+  __loadLineStatus = window.__loadLineStatus;
 
   // qrLogs 保存
   // eslint-disable-next-line no-undef
@@ -1094,7 +1201,7 @@ document.getElementById("exitBtn").addEventListener("click", ()=>{ downloadCSV(l
     }
   };
 
-  // ★ prodStatusLogs（時系列）
+  // prodStatusLogs（時系列）
   // eslint-disable-next-line no-undef
   __firestoreStatusLog = async function(payload){
     try{
@@ -1109,7 +1216,7 @@ document.getElementById("exitBtn").addEventListener("click", ()=>{ downloadCSV(l
     }
   };
 
-  // ★★ ダッシュボード連携：ライン別ステータスを書き込む
+  // ダッシュボード連携：ライン別ステータスを書き込む
   window.__writeLineStatus = async function(line, statusData){
     try{
       const docRef = doc(db, "lineStatus", line);
@@ -1123,7 +1230,7 @@ document.getElementById("exitBtn").addEventListener("click", ()=>{ downloadCSV(l
     }
   };
 
-  // ★ ④ 今日のステータス遷移：リアルタイム表示（最新50件）
+  // 今日のステータス遷移：リアルタイム表示（最新50件）
   function startTodayTimeline(){
     const now = new Date();
     const start = new Date(now.getFullYear(), now.getMonth(), now.getDate(), 0,0,0,0);
@@ -1158,6 +1265,15 @@ document.getElementById("exitBtn").addEventListener("click", ()=>{ downloadCSV(l
     window.__timelineUnsub = startTodayTimeline();
   }catch(e){
     console.warn(e);
+  }
+
+  // ★★★★★ 起動時：Firebase準備完了 → 復元実行 ★★★★★
+  try{
+    if(typeof window.__restoreFromFirebase === "function"){
+      window.__restoreFromFirebase();
+    }
+  }catch(e){
+    console.warn("auto restore error:", e);
   }
 </script>
 </body>
