--- a/seizouqr.html
+++ b/seizouqr.html
@@ -1064,6 +1064,35 @@ document.getElementById("resetBtn").addEventListener("click", ()=>{
 });
 document.getElementById("saveBtn").addEventListener("click", ()=>downloadCSV(logData));
 document.getElementById("exitBtn").addEventListener("click", ()=>{ downloadCSV(logData,"qr_log"); window.close(); });
+let wakeLock = null;
+
+async function requestWakeLock() {
+  try {
+    if ('wakeLock' in navigator) {
+      wakeLock = await navigator.wakeLock.request('screen');
+      console.log('Wake Lock acquired');
+
+      wakeLock.addEventListener('release', () => {
+        console.log('Wake Lock released');
+      });
+    }
+  } catch (err) {
+    console.warn('Wake Lock failed:', err);
+  }
+}
+
+// ページ表示時に取得
+document.addEventListener('visibilitychange', () => {
+  if (document.visibilityState === 'visible') {
+    requestWakeLock();
+  }
+});
+
+// 初回ロード時
+window.addEventListener('load', () => {
+  requestWakeLock();
+});
+  
 </script>
 
 <!-- Firebase SDK -->
